# kubernetes-attack-scenarios

./: .gitignore  README.md
scenario_1/: README.md  package-lock.json  poc.py
scenario_1/server/: server.js
scenario_1_nodejs_rce/: README.md
scenario_1_nodejs_rce/server/: Dockerfile
scenario_1_nodejs_rce/server/kube/: scenario-1-server-service.yaml  scenario-1-server.yaml
scenario_2_nodejs_rce_database/: README.md
scenario_2_nodejs_rce_database/server/: Dockerfile  package.json  server.js
scenario_2_nodejs_rce_database/server/kube/: mysql-manifest.yaml  scenario-2-server.yaml
scenario_3_nodejs_rce_priv_esc/: README.md  poc.py  ssh_key  ssh_key.pub
scenario_3_nodejs_rce_priv_esc/server/: package.json  server.js
scenario_4_spring_rce/: README.md  exploit.py
scenario_4_spring_rce/FlaskVulnerableFrontEnd/: Dockerfile  app.py
scenario_4_spring_rce/SpringBreakVulnerableApp/: Dockerfile
scenario_5_apache_struts_rce/: README.md  poc.py
scenario_5_apache_struts_rce/server/: Dockerfile
scenario_6_drogon_arb_file_write/: README.md  fake_config.json
scenario_6_drogon_arb_file_write/server/: Dockerfile
scenario_6_drogon_arb_file_write/server/app/: CMakeLists.txt  config.json  main.cpp  main_new.cpp
scenario_7_jenkins_arbitrary_file_read/: README.md  poc.py
scenario_7_jenkins_arbitrary_file_read/CVE-2024-23897/: jenkins_fileread.py
scenario_7_jenkins_arbitrary_file_read/server/: Dockerfile
scenario_8_rpc_rce/: README.md  poc.py
scenario_8_rpc_rce/server/: Dockerfile
scenario_9_spring_messaging_rce/: README.md
(+8 files in other folders)
